# routes/auth.js
@@ -10,6 +10,7 @@ const {
     userDelete,
     read,
     userUpdateData,
+    getUsersForMessage,
 } = require('../controllers/auth');
 const { authenticate } = require('../middleware/authurize');
 // import validators
@@ -21,5 +22,6 @@ router.post('/signin', userSigninValidator, runValidation, signin);
 router.get('/user-list', authenticate, userListData);
 router.delete('/user-delete', authenticate, userDelete);
 router.get('/user-details/:id', authenticate, read);
+router.get('/get-users-list-for-message', authenticate, getUsersForMessage);
 router.put('/user-update', authenticate, userUpdateData);
 module.exports = router;
